// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`表单 card模式 1`] = `
<body>
  <div
    class="adm-px-tester"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class=""
      style="line-height: 1; align-self: stretch; flex-direction: column; box-sizing: border-box; background-color: rgb(255, 255, 255); border-radius: 10px; padding-left: 10px; padding-right: 10px; box-shadow: 0 0 10px rgba(39,128,217, 0.15);"
    >
      <div
        class=""
        style="line-height: 1; flex-direction: column;"
      >
        <div
          class=""
          id="id21"
          style=""
        >
          <div
            class=""
            data-is-last="false"
            style="border-bottom-width: 1px;"
          >
            <div>
              <div
                class=""
                style="opacity: 0;"
              >
                *
              </div>
              <div
                class=""
                style="justify-content: flex-end;"
              >
                姓名
              </div>
              <div
                class=""
              >
                :
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-start;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入姓名"
                placeholderstyle="[object Object]"
                style="text-align: left;"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id22"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
          id="id24"
          style=""
        >
          <div
            class=""
            data-is-last="true"
            style="border-bottom-width: 0;"
          >
            <div>
              <div
                class=""
                style="opacity: 1;"
              >
                *
              </div>
              <div
                class=""
                style="justify-content: flex-end;"
              >
                手机号
              </div>
              <div
                class=""
              >
                :
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-start;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入手机号"
                placeholderstyle="[object Object]"
                style="text-align: left;"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id25"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`表单 cell模式 1`] = `
<body>
  <div
    class="adm-px-tester"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class=""
      style="line-height: 1; align-self: stretch; flex-direction: column; box-sizing: border-box; background-color: rgb(255, 255, 255); border-radius: 10px; padding-left: 10px; padding-right: 10px; box-shadow: 0 0 10px rgba(39,128,217, 0.15);"
    >
      <div
        class=""
        style="line-height: 1; flex-direction: column;"
      >
        <div
          class=""
          id="id11"
          style=""
        >
          <div
            class=""
            data-is-last="false"
            style="border-bottom-width: 1px;"
          >
            <div>
              <div
                class=""
                style="opacity: 0;"
              >
                *
              </div>
              <div
                class=""
                style="justify-content: flex-end;"
              >
                姓名
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-end;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入姓名"
                placeholderstyle="[object Object]"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id12"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
          id="id14"
          style=""
        >
          <div
            class=""
            data-is-last="true"
            style="border-bottom-width: 0;"
          >
            <div>
              <div
                class=""
                style="opacity: 1;"
              >
                *
              </div>
              <div
                class=""
                style="justify-content: flex-end;"
              >
                手机号
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-end;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入手机号"
                placeholderstyle="[object Object]"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id15"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`表单 两端对齐 1`] = `
<body>
  <div
    class="adm-px-tester"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class=""
      style="line-height: 1; align-self: stretch; flex-direction: column;"
    >
      <div
        class=""
        style="line-height: 1; flex-direction: column;"
      >
        <div
          class=""
          id="id31"
          style=""
        >
          <div
            class=""
            data-is-last="false"
            style="border-bottom-width: 1px;"
          >
            <div>
              <div
                class=""
                style="opacity: 0;"
              >
                *
              </div>
              <div
                class=""
                style="width: 3em; justify-content: space-between;"
              >
                <div
                  style="width: 1em;"
                >
                  姓
                </div>
                <div
                  style="width: 1em;"
                >
                  名
                </div>
              </div>
              <div
                class=""
              >
                :
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-start;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入姓名"
                placeholderstyle="[object Object]"
                style="text-align: left;"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id32"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
          id="id34"
          style=""
        >
          <div
            class=""
            data-is-last="true"
            style="border-bottom-width: 0;"
          >
            <div>
              <div
                class=""
                style="opacity: 1;"
              >
                *
              </div>
              <div
                class=""
                style="width: 3em; justify-content: space-between;"
              >
                <div
                  style="width: 1em;"
                >
                  手
                </div>
                <div
                  style="width: 1em;"
                >
                  机
                </div>
                <div
                  style="width: 1em;"
                >
                  号
                </div>
              </div>
              <div
                class=""
              >
                :
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-start;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入手机号"
                placeholderstyle="[object Object]"
                style="text-align: left;"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id35"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`表单 渲染 1`] = `
<body>
  <div
    class="adm-px-tester"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class=""
      style="line-height: 1; align-self: stretch; flex-direction: column;"
    >
      <div
        class=""
        style="line-height: 1; flex-direction: column;"
      >
        <div
          class=""
          id="id1"
          style=""
        >
          <div
            class=""
            data-is-last="false"
            style="border-bottom-width: 1px;"
          >
            <div>
              <div
                class=""
                style="opacity: 0;"
              >
                *
              </div>
              <div
                class=""
                style="justify-content: flex-end;"
              >
                姓名
              </div>
              <div
                class=""
              >
                :
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-start;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入姓名"
                placeholderstyle="[object Object]"
                style="text-align: left;"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id2"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
          id="id4"
          style=""
        >
          <div
            class=""
            data-is-last="true"
            style="border-bottom-width: 0;"
          >
            <div>
              <div
                class=""
                style="opacity: 1;"
              >
                *
              </div>
              <div
                class=""
                style="justify-content: flex-end;"
              >
                手机号
              </div>
              <div
                class=""
              >
                :
              </div>
            </div>
            <div
              class=""
              style="justify-content: flex-start;"
            >
              <input
                class=""
                delay="500"
                disabled=""
                maxlength="100000000"
                nativeref="[object Object]"
                placeholder="请输入手机号"
                placeholderstyle="[object Object]"
                style="text-align: left;"
                toutiao-selection-end="999"
                toutiao-selection-start="999"
                value=""
                wechat-confirm-type="done"
                wechat-cursor-spacing="0"
                wechat-placeholder-class="input-placeholder"
                wechat-selection-end="-1"
                wechat-selection-start="-1"
              />
            </div>
            <div
              class=""
              style="align-items: center;"
            >
              <div
                class=""
                id="id5"
                style="display: none;"
              >
                <div
                  class=""
                  style="width: 16px; height: 16px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
